# SoftwareRenderer

./: BUILD_SCRIPT  CMakeLists.txt  README.md  makefile
Assignments/CG_hw1/: CMakeFiles.cmake  CMakeLists.txt
Assignments/CG_hw1/src/: CG_hw1.cpp
Assignments/CG_hw2/: CMakeFiles.cmake  CMakeLists.txt
Assignments/CG_hw2/src/: CG_hw2.cpp
Assignments/CG_hw2/tests/: CMakeFiles.cmake  CMakeLists.txt
Assignments/CG_hw2/tests/src/: CG_hw2UnitTests.cpp
Assignments/CG_hw3/: CMakeFiles.cmake  CMakeLists.txt
Assignments/CG_hw3/src/: CG_hw3.cpp
Assignments/CG_hw4/: CMakeFiles.cmake  CMakeLists.txt
Assignments/CG_hw4/src/: CG_hw4.cpp
Assignments/CG_hw5/: CMakeFiles.cmake  CMakeLists.txt
Assignments/CG_hw5/src/: CG_hw5.cpp
CG_hw1/src/: CG_hw1.cpp
CommandLineParser/: CMakeFiles.cmake  CMakeLists.txt
CommandLineParser/src/: CommandLineParser.cpp  CommandLineParser.h  CommandLineParserPCH.h
CommandLineParser/tests/: CMakeFiles.cmake  CMakeLists.txt
CommandLineParser/tests/src/: CommandLineParserUnitTests.cpp
FileIO/: CMakeFiles.cmake  CMakeLists.txt
FileIO/src/: FileIO.cpp  FileIO.h  FileIOPCH.h  FileReader.cpp  FileReader.h
FileIO/tests/: CMakeFiles.cmake  CMakeLists.txt
FileIO/tests/assets/: sampleFile.txt
FileIO/tests/src/: FileIOUnitTests.cpp
InputParser/: CMakeFiles.cmake  CMakeLists.txt
InputParser/src/: InputParser.h
InputParser/tests/: CMakeFiles.cmake  CMakeLists.txt
slm/: CMakeFiles.cmake  CMakeLists.txt
slm/src/: Clipping.h  LineT.h  Mat.h  PBMImage.h  PPMImage.cpp  PPMImage.h  PolygonT.h  PostscriptInterpreter.h  Primitive.cpp  Primitive.h  SMFInterpreter.cpp  SMFInterpreter.h  Scene.h  Vec.cpp  Vec.h  VecT.h  Viewport.h  slm.h  slmPCH.h
slm/tests/: CMakeFiles.cmake  CMakeLists.txt
slm/tests/src/: ClippingUnitTests.cpp  HelperFunctions.cpp  HelperFunctions.h  LineTUnitTests.cpp  PBMImageUnitTests.cpp  PPMImageUnitTests.cpp  PolygonTUnitTests.cpp  PostscriptInterpreter.cpp  PrimitiveUnitTests.cpp  SMFInterpreterUnitTests.cpp  VecTUnitTests.cpp  VecUnitTests.cpp  ViewportUnitTests.cpp
