include(CMakeFiles.cmake)

add_executable(CommandLineParser_unit_tests ${CommandLineParser_test_FILES})

target_link_libraries(CommandLineParser_unit_tests PRIVATE CommandLineParser Catch2::Catch2WithMain)

set_target_properties(CommandLineParser_unit_tests PROPERTIES LINKER_LANGUAGE CXX)
target_compile_features(CommandLineParser_unit_tests PRIVATE cxx_std_20)

enable_testing()
add_test(NAME CommandLineParser_unit_tests COMMAND $<TARGET_FILE:CommandLineParser_unit_tests>)